--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.8.0",
     "formidable": "^3.5.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
