--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.8.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.2.5",
     "formidable": "^3.5.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
