--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "docx": "^8.5.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.3.12",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest",
-    "formidable": "^3.5.1"
+    "react-dom": "latest"
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
@@ -28,7 +28,6 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.2.5",
-    "formidable": "^3.5.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
     "typescript": "latest"
